tests/compile_fail/non_empty_struct_without_derive.stderr
warning: unused import: `FieldWitnesses`
 --> tests/compile_fail/non_empty_struct_without_derive.rs:3:17
  |
3 | use tnuctipun::{FieldWitnesses, NonEmptyStruct};
  |                 ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `RegularStruct: NonEmptyStruct` is not satisfied
  --> tests/compile_fail/non_empty_struct_without_derive.rs:18:43
   |
18 |     _assert_implements_non_empty_struct::<RegularStruct>();
   |                                           ^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `NonEmptyStruct` is not implemented for `RegularStruct`
  --> tests/compile_fail/non_empty_struct_without_derive.rs:9:1
   |
 9 | struct RegularStruct {
   | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `_assert_implements_non_empty_struct`
  --> tests/compile_fail/non_empty_struct_without_derive.rs:17:47
   |
17 |     fn _assert_implements_non_empty_struct<T: NonEmptyStruct>() {}
   |                                               ^^^^^^^^^^^^^^ required by this bound in `_assert_implements_non_empty_struct`
